# oxide

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: create-python-release.yaml
oxide/: Cargo.toml
oxide-lambda/: Cargo.toml
oxide-lambda/src/: main.rs
oxide/src/: lib.rs  weibull.rs
py-oxide/: .gitignore  Cargo.toml  README.md  pyproject.toml
py-oxide/examples/: README.md
py-oxide/python/: README.md
py-oxide/python/examples/notebooks/: reliability.ipynb
py-oxide/python/oxide/: __init__.py
py-oxide/src/: lib.rs  weibull.rs  weibull_model.rs
