[package]
name = "oxide-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
oxide = { path = "../oxide" }
lambda_http = "0.7"
lambda_runtime = "0.7"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
statrs = "0.16.0"
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"

