[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "pyoxide"
requires-python = ">=3.8"
readme = "README.md"
description = "Mixing Python with Rust"
authors = [
  {email = "todd.young@pinnaclereliability.com"},
  {name = "Todd Young"}
]
maintainers = [
  {name = "Todd Young", email = "todd.young@pinnaclereliability.com"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
python-source = "python"
